# prysm

light-client/core/: BUILD.bazel  service.go  update.go
proto/beacon/p2p/v1/: BUILD.bazel  generated.ssz.go  types.pb.go  types.proto
proto/validator/accounts/v2/: web_api.pb.go
proto/validator/accounts/v2_gateway/: web_api.pb.go
shared/params/: config.go  mainnet_config.go
